Fix applicant detail spacing

--- a/src/components/ApplicantDetail/styles.module.scss
+++ b/src/components/ApplicantDetail/styles.module.scss
@@ -52,6 +52,10 @@
 }
 
 @include customMedia {
+  .headline {
+    margin-bottom: $spacing-m;
+  }
+
   .capabilitiesAndCareersContainer {
     flex-direction: column;
 
